[package]
name = "maelstrom-broadcast-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
maelstrom-node = "0.1.6"
async-trait = "0.1.81"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.20"
tokio = "1.38.0"
async-recursion = "1.1.1"
rand = "0.9.0-alpha.2"
tokio-context = "0.1.3"